never have I ever done spaghetti code (guilty) -added scrollbar-and-nav.css to make the side makfile e tmake the side-scroll-bar responsive for landscape and portrait orientation, updated the scroll. updated the scroll.js file to deal with the change of orientation, froze a big part of the media querries in order to solve it

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,6 @@
     display: none;
 }
 
-
 body {
     position: relative;
     font-family: Lato, sans-serif;
@@ -31,24 +30,34 @@ h4 {
     color: #ffffff
 }
 
-#when-landscape-mode-wrapper {
-    position: fixed;
+li>a {
+    text-decoration: none;
+    color: inherit;
 }
+
 
 #main-nav {
     position: fixed;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     height: 10%;
     background-color: #202B31;
     width: 100%;
     z-index: 10;
 }
 
-
-li>a {
+#main-nav #menu,
+#main-nav #logo {
     text-decoration: none;
-    color: inherit;
+    color: #ffff;
+}
+
+
+#main-nav #logo {
+    width: 30%;
+    margin: 0 30px 0 60px;
+    font-size: 280%;
 }
 
 #main-nav #menu {
@@ -59,18 +68,6 @@ li>a {
     width: 50%;
     height: 100%;
 
-}
-
-#main-nav #logo {
-    width: 30%;
-    margin: 0 30px 0 60px;
-    font-size: 280%;
-}
-
-#main-nav #menu,
-#main-nav #logo {
-    text-decoration: none;
-    color: #ffff;
 }
 
 #main-nav #menu li {
@@ -87,65 +84,6 @@ li>a {
 
 #current-link {
     text-decoration: underline
-}
-
-#secondary-nav {
-    border-radius: 5px;
-    margin: 14vh 0 14vh 50px;
-    height: 75%;
-    position: fixed;
-    background-color: #202B31;
-}
-
-#scroll-bar {
-    top: 0%;
-    border-radius: 5px;
-    position: absolute;
-    width: 100%;
-    height: 0%;
-    background-color: rgb(223, 156, 13);
-}
-
-#side-scroll-menu {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    z-index: 11;
-}
-
-#side-scroll-menu li {
-    position: relative;
-    list-style-type: none;
-    /* height: 20%;  the height for this element is interractively set in scroll.js file, as the number of links differs from page to page*/
-    padding: 2px;
-}
-
-#side-scroll-menu li a .side-menu-label {
-    position: absolute;
-    top: 0;
-    left: 50px;
-}
-
-#side-scroll-menu li a .side-menu-label {
-    display: none;
-}
-
-#side-scroll-menu li a #link-area {
-    position: relative;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 5;
-}
-
-#side-scroll-menu li a #link-area:hover>i {
-    scale: 1.3;
-    color: rgb(255, 255, 255);
-}
-
-#side-scroll-menu li a #link-area:hover+.side-menu-label {
-    display: inline;
 }
 
 
@@ -273,18 +211,6 @@ footer {
 
 @media screen and (max-width:1600px) {
 
-    #main-nav #logo {
-        font-size: 200%;
-    }
-
-    #secondary-nav {
-        border-radius: 5px;
-        margin: 10vh 0 10vh 30px;
-        height: 80vh;
-        position: fixed;
-        background-color: #202B31
-    }
-
     .wrapper-column1 {
         width: 100%;
         margin: 0;
@@ -300,16 +226,7 @@ footer {
     }
 }
 
-@media screen and (max-width:1400px) {
-    #main-nav #menu {
-        display: none;
-    }
-
-    #main-nav #logo {
-        width: 50%;
-    }
-
-}
+@media screen and (max-width:1400px) {}
 
 
 @media screen and (max-width:767px) {
@@ -327,21 +244,7 @@ footer {
         max-width: 20em;
     }
 
-    #secondary-nav {
-        border-radius: 5px;
-        margin: 10vh 0 10vh 20px;
-        height: 80%;
-        position: fixed;
-        background-color: #202B31
-    }
 
-    #main-nav {
-        height: 5%;
-    }
-
-    #main-nav #logo {
-        width: 60%;
-    }
 
     #gradient-intro-section-lottie {
         width: 150%;
@@ -405,89 +308,5 @@ footer {
     .lottie-intro-section-animation {
         scale: 1;
         right: 0;
-    }
-
-    #when-landscape-wrapper {
-        position: fixed;
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        height: 10%;
-    }
-
-    #main-nav {
-        display: block-element;
-        position: static;
-        height: 50%;
-    }
-
-
-
-    #secondary-nav {
-        position: relative;
-        display: flex;
-        align-items: flex-start;
-        margin: 0;
-        height: 50%;
-        width: 100%;
-        border-radius: 0;
-    }
-
-    #scroll-bar {
-        position: absolute;
-        width: 0;
-        height: 100%;
-        background-color: rgb(223, 156, 13);
-        z-index: 10;
-        border-radius: 0;
-
-    }
-
-    #side-scroll-menu {
-        padding: 0% 2%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        z-index: 11;
-    }
-
-    #side-scroll-menu li {
-        display: flex;
-        align-items: center;
-        z-index: 14;
-        position: relative;
-        list-style-type: none;
-        height: 100%;
-        /* height: 20%;  the height and width for this element is interractively set in scroll.js file, as the number of links differs from page to page*/
-        padding: 2px;
-    }
-
-    #side-scroll-menu li a .side-menu-label {
-        position: absolute;
-        top: 20%;
-    }
-
-
-
-    #side-scroll-menu li a #link-area {
-        position: relative;
-        left: 0;
-        height: 100%;
-        width: 100%;
-    }
-
-    #side-scroll-menu li a #link-area:hover>i {
-        scale: 1.3;
-        color: rgb(255, 255, 255);
-    }
-
-    #side-scroll-menu li a .side-menu-label {
-        display: none;
-    }
-
-    #side-scroll-menu li a #link-area:hover+.side-menu-label {
-        display: block;
     }
 }
